--- a/app/views/contacts/index.html.haml
+++ b/app/views/contacts/index.html.haml
@@ -1,3 +1,6 @@
+.pull-right
+	= link_to 'New Contact', new_contact_path, :class => "btn btn-default" if is_admin?
+
 %h1 Listing contacts
 
 %table.table
@@ -33,7 +36,4 @@
 					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_contact_path(contact), html = {:title => "Edit"}
 				%td.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, contact, method: :delete, data: { confirm: 'Are you sure you want to delete this contact?' }, :title => "Destroy"
 
-
-%br
-
-= link_to 'New Contact', new_contact_path
+-#= link_to 'New Contact', new_contact_path
