--- a/app/views/notes/_form.html.haml
+++ b/app/views/notes/_form.html.haml
@@ -11,6 +11,11 @@
 
 	%h2= @note.job.title if @note.job
 
+	- if !@note.job
+		.form-group
+			= f.label :job, :class => "control-label col-sm-2"
+			.col-sm-5
+				= f.select :job_id, options_for_select(Job.for_select), {}, :class => "form-control"
 	.form-group
 		= f.label :title, :class => "control-label col-sm-2"
 		.col-sm-5
