--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -1,3 +1,6 @@
+.pull-right
+	= link_to 'Add Note', new_note_path, :class => "btn btn-default" if is_admin?
+
 %h1 Listing notes
 
 %table.table
@@ -29,6 +32,4 @@
 					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_note_path(note), html = {:title => "Edit"}
 				%td.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, note, method: :delete, data: { confirm: 'Are you sure you want to delete?' }, :title => "Destroy"
 
-%br
-
-= link_to 'New Note', new_note_path
+-#= link_to 'New Note', new_note_path
