--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,3 +1,6 @@
+.pull-right
+	= link_to 'Add Task', new_task_path, :class => "btn btn-default" if is_admin?
+
 %h1 Task List
 
 %table.table
@@ -47,6 +50,4 @@
 				%td.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, task, method: :delete, data: { confirm: 'Are you sure you want to delete this task?' }, :title => "Destroy"
 
 
-%br
-
-= link_to 'New Task', new_task_path
+-#= link_to 'New Task', new_task_path
