--- a/app/views/template_tasks/index.html.haml
+++ b/app/views/template_tasks/index.html.haml
@@ -1,3 +1,6 @@
+.pull-right
+	= link_to 'New Task Template', new_template_task_path, :class => "btn btn-default" if is_admin?
+
 %h1 Task Templates
 
 %table.table
@@ -23,6 +26,4 @@
 					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_template_task_path(template_task), html = {:title => "Edit"}
 				%td.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, template_task, method: :delete, data: { confirm: 'Are you sure you want to delete this task template?' }, :title => "Destroy"
 
-%br
-
-= link_to 'New Task Template', new_template_task_path
+-#= link_to 'New Task Template', new_template_task_path
