--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,3 +1,6 @@
+.pull-right
+	= link_to 'Add User', new_user_path, :class => "btn btn-default" if is_admin?
+
 %h1 All Users
 
 = will_paginate
@@ -30,6 +33,4 @@
 					%td.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, user, method: :delete, data: { confirm: 'Are you sure you want to delete this user?' }, :title => "Destroy"
 
 
-%br
-
-= link_to 'New user', new_user_path if is_admin?
+-#= link_to 'New user', new_user_path if is_admin?
