--- a/app/views/shared/_tasklist.html.haml
+++ b/app/views/shared/_tasklist.html.haml
@@ -6,7 +6,11 @@
 			- tasklist.each do |t|
 				%li
 					-#%a{ :href => "#{task_path(t)}", :class => "list-group-item list-group-item-success #{'financial' if t.is_financial} #{'complete' if t.task_complete?}" }
-					%div{ :id => "t#{t.id}", :class => "list-group-item list-group-item-success collapsed h#{t.job.id if t.job} hand#{' financial' if t.is_financial}#{' complete' if t.task_complete?}", :"data-toggle" => "collapse", :"data-target" => "#comp#{ t.id }" }
+					%div{ :id => "t#{t.id}", :style => "background-color:##{t.job.colour if t.job}", :class => "list-group-item list-group-item-success collapsed h#{t.job.id if t.job} hand", :"data-toggle" => "collapse", :"data-target" => "#comp#{ t.id }" }
+						- if t.task_complete?
+							%span.glyphicon.glyphicon-ok
+						- if t.is_financial
+							%span.glyphicon.glyphicon-gbp
 						= t.title
 						= " (" + t.due_date_text + ")"
 					%div{ :id => "comp#{ t.id }", :class => "collapse", :style => "height: 0px;" }
