Tweak job styles so we don't get h1. etc.

--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -13,8 +13,8 @@
 	%ul
 		- class_list = ""
 		- @jobs.each do |job|
-			- class_list += "'h#{job.id}', "
-			%li.job{ :class => "h#{job.id}", :onclick => "location.href='" + job_path(job) + "'", :style => "background-color: ##{job.colour ? job.colour : '428bca'}" }
+			- class_list += "'j#{job.id}', "
+			%li.job{ :class => "j#{job.id}", :onclick => "location.href='" + job_path(job) + "'", :style => "background-color: ##{job.colour ? job.colour : '428bca'}" }
 				%h1
 					= job.reference.to_s
 					%br
