--- a/app/views/jobs/_form.html.haml
+++ b/app/views/jobs/_form.html.haml
@@ -39,46 +39,36 @@
 		-#	= link_to "<button type='button' class='btn btn-default'><span class='glyphicon glyphicon-plus'></span></button>".html_safe, "#", html = {:title => "Add", :onclick => "$(add_contact('a'))"}
 
 	.form-group
+		= f.label :legal_rep_a, :class => "control-label col-sm-2"
+		.col-sm-5
+			= f.select :legal_rep, options_for_select([["Please select...",""]]+Contact.for_select, @job.legal_rep), {}, :class => "form-control"
+
+	.form-group
 		= f.label "Party B", :class => "control-label col-sm-2"
 		.col-sm-5
 			= f.select :party_b_id, options_for_select([["Please select...",""]]+Contact.for_select, @job.party_b_id), {}, :class => "form-control"
 
 	.form-group
-		= f.label :legal_rep, :class => "control-label col-sm-2"
+		= f.label :legal_rep_b, :class => "control-label col-sm-2"
 		.col-sm-5
-			= f.select :legal_rep, options_for_select([["Please select...",""]]+Contact.for_select, @job.legal_rep), {}, :class => "form-control"
+			= f.select :legal_rep1, options_for_select([["Please select...",""]]+Contact.for_select, @job.legal_rep1), {}, :class => "form-control"
 
 	.form-group
 		= f.label :mediator, :class => "control-label col-sm-2"
 		.col-sm-5
 			= f.select :mediator, options_for_select([["Please select...",""]]+Contact.for_select, @job.mediator), {}, :class => "form-control"
 
-	.div{ :style => "border: 1px solid gray;" }
+	.div{ :style => "border: 1px solid gray; margin-bottom:10px; padding-left: 20px;" }
 		%h2{ :style => "font-weight:strong;" } Possible Reps
-		.form-group
-			= f.label :legal_rep1, :class => "control-label col-sm-2"
-			.col-sm-5
-				= f.select :legal_rep1, options_for_select([["Please select...",""]]+Contact.for_select, @job.legal_rep1), {}, :class => "form-control"
-
 		.form-group
 			= f.label :mediator1, :class => "control-label col-sm-2"
 			.col-sm-5
 				= f.select :mediator1, options_for_select([["Please select...",""]]+Contact.for_select, @job.mediator1), {}, :class => "form-control"
 
 		.form-group
-			= f.label :legal_rep2, :class => "control-label col-sm-2"
-			.col-sm-5
-				= f.select :legal_rep2, options_for_select([["Please select...",""]]+Contact.for_select, @job.legal_rep2), {}, :class => "form-control"
-
-		.form-group
 			= f.label :mediator2, :class => "control-label col-sm-2"
 			.col-sm-5
 				= f.select :mediator2, options_for_select([["Please select...",""]]+Contact.for_select, @job.mediator2), {}, :class => "form-control"
-
-		.form-group
-			= f.label :legal_rep3, :class => "control-label col-sm-2"
-			.col-sm-5
-				= f.select :legal_rep3, options_for_select([["Please select...",""]]+Contact.for_select, @job.legal_rep3), {}, :class => "form-control"
 
 		.form-group
 			= f.label :mediator3, :class => "control-label col-sm-2"
