--- a/app/views/shared/_tasklist.html.haml
+++ b/app/views/shared/_tasklist.html.haml
@@ -6,7 +6,7 @@
 			- tasklist.each do |t|
 				%li
 					-#%a{ :href => "#{task_path(t)}", :class => "list-group-item list-group-item-success #{'financial' if t.is_financial} #{'complete' if t.task_complete?}" }
-					%div{ :id => "t#{t.id}", :style => "background-color:##{t.job.colour if t.job}", :class => "list-group-item list-group-item-success collapsed j#{t.job.id if t.job} hand", :"data-toggle" => "collapse", :"data-target" => "#comp#{ t.id }" }
+					%div{ :id => "t#{t.id}", :style => "background-color:##{t.job.colour if t.job}; color: #{t.job.foreground_colour if t.job};", :class => "list-group-item list-group-item-success collapsed j#{t.job.id if t.job} hand", :"data-toggle" => "collapse", :"data-target" => "#comp#{ t.id }" }
 						- if t.task_complete?
 							%span.glyphicon.glyphicon-ok
 						- if t.is_financial
