--- a/app/assets/stylesheets/template_tasks.css.scss
+++ b/app/assets/stylesheets/template_tasks.css.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the template_tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+ui-sortable {  
+    width: 350px;  
+    margin: 50px auto;  
+    background-color: #ccc;  
+    -webkit-box-shadow:  0px 0px 10px 1px rgba(0, 0, 0, .1);  
+  box-shadow:  0px 0px 10px 1px rgba(0, 0, 0, .1);  
+  list-style-type: none;   
+  padding: 0;   
+}
+
+.ui-sortable-placeholder {  
+    border: 3px dashed #aaa;  
+    height: 45px;  
+    width: 344px;  
+    background: #ccc;  
+}  
