--- a/app/views/template_tasks/index.html.haml
+++ b/app/views/template_tasks/index.html.haml
@@ -3,42 +3,36 @@
 
 %h1 Task Templates
 
-%table#sortable.table.table-hover
-	%thead
-		%tr
-			%th
-			%th
-			%th Title
-			%th Text
-			%th Days til Due
-			%th
-			%th
-			%th
+= form_tag("template_tasks/sort_templates") do
+	%table#sortable.table.table-hover
+		%thead
+			%tr
+				%th
+				%th
+				%th Title
+				%th Text
+				%th Days til Due
+				%th
+				%th
+				%th
 
-	%tbody
-		- @template_tasks.each do |template_task|
-			%tr{ :class => "#{'financial' if template_task.is_financial}" }
-				-# .ui-state-default
-				%td
-					%span.ui-icon.ui-icon-arrowthick-2-n-s
-				%td.increment= template_task.sort_order
-				%td= template_task.title
-				%td= template_task.text
-				%td= template_task.due_days
-				%td
-					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-eye-open'></span></button>".html_safe, template_task, html = {:title => "Show"}
-					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_template_task_path(template_task), html = {:title => "Edit"}
-				%td.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, template_task, method: :delete, data: { confirm: 'Are you sure you want to delete this task template?' }, :title => "Destroy"
-	/
-		%tr.ui-sortable-placeholder
-			%td &nbsp;
-			%td &nbsp;
-			%td &nbsp;
-			%td &nbsp;
-			%td &nbsp;
-			%td &nbsp;
-			%td &nbsp;
-			%td &nbsp;
+		%tbody
+			- @template_tasks.each do |template_task|
+				%tr{ :class => "#{'financial' if template_task.is_financial}" }
+					-# .ui-state-default
+					%td
+						%span.glyphicon.glyphicon-sort
+					%td
+						= text_field_tag "sort_order[#{template_task.id}]", template_task.sort_order, :id => template_task.id, :class => "increment col-sm-3"
+					%td= template_task.title
+					%td= template_task.text
+					%td= template_task.due_days
+					%td
+						= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-eye-open'></span></button>".html_safe, template_task, html = {:title => "Show"}
+						= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_template_task_path(template_task), html = {:title => "Edit"}
+					%td.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, template_task, method: :delete, data: { confirm: 'Are you sure you want to delete this task template?' }, :title => "Destroy"
+			%tr{ :colspan => 8 }
+				= submit_tag "Save Order", :class => "btn btn-default"
 
 -#= link_to 'New Task Template', new_template_task_path
 :javascript
@@ -59,7 +53,8 @@
 	increment = function() {
 		var i = 1;
 		$('.increment').each(function(key,value) {
-			$(this).html(i);
+			//$(this).html(i);
+			$(this).val(i);
 			i++;
 		});
 	}
