--- a/app/views/jobs/show.html.haml
+++ b/app/views/jobs/show.html.haml
@@ -1,3 +1,9 @@
+:javascript
+	jQuery(function() {
+		jQuery( "#note_the_date" ).datepicker( { dateFormat: 'dd M yy' } );
+		jQuery( "#note_the_date" ).datepicker( "option", "defaultDate", "#{@note.the_date.blank? ? DateTime.now().strftime('%d %b %Y') :  @note.the_date.strftime('%d %b %Y')}" );
+	});
+
 .center-block
 	%p#notice= notice
 
@@ -46,7 +52,8 @@
 		.form-group
 			= f.label :Date, :class => "control-label col-sm-2"
 			.col-sm-5
-				= f.text_field :the_date, :class => "form-control autofocus"
+				- val = @note.the_date.blank? ? (@note.created_at.blank? ? DateTime.now.strftime("%d %b %Y") : @note.created_at.strftime("%d %b %Y")) : @note.the_date.strftime("%d %b %Y")
+				= f.text_field :the_date, :value => val, :class => "form-control autofocus"
 
 		.form-group
 			= f.label :title, :class => "control-label col-sm-2"
@@ -90,9 +97,12 @@
 				= f.submit class: "btn btn-primary"
 
 	%table.table.table-striped{ :style => "width: 74%; float: left;" }
-		- @job.notes.each do |n|
+		- @job.notes.order("the_date").each do |n|
 			%tr
 				%td= n.note_type
+				%td= n.the_date.strftime("%d %b") if !n.the_date.blank?
 				%td{ :title => n.text }= n.title
 				%td.text-right= number_to_currency(n.cost.to_s, unit: "&pound; ".html_safe) if !n.cost.blank?
 				%td.text-right= n.time_taken.to_s + " h".html_safe
+				-# if is_admin?
+				%td= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_note_path(n, :from => "job"), html = {:title => "Edit"}
