Check if note has blank date before trying to show it

--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -5,7 +5,7 @@
 
 %p
 	%strong Date:
-	= @note.the_date.strftime("%d %b %Y")
+	= @note.the_date.strftime("%d %b %Y") if !@note.the_date.blank?
 
 %p
 	%strong Title:
