--- a/app/assets/stylesheets/finances.css.scss
+++ b/app/assets/stylesheets/finances.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Finances controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+ul.finance {
+	li {
+		.reference{ display: inline-block; float: left; width: 400px; }
+		.amount { display: inline-block; width: 200px; }
+		.time { display: inline-block; width: 200px; }
+	}
+}
+td.paid { color: green; }
