--- a/app/views/contacts/index.html.haml
+++ b/app/views/contacts/index.html.haml
@@ -3,37 +3,10 @@
 
 %h1 Listing contacts
 
-%table.table
-	%thead
-		%tr
-			%th Title
-			%th First name
-			%th Last name
-			%th Company
-			%th Phone
-			%th Email
-			%th Address
-			%th Post code
-			%th Text
-			%th 
-			%th 
-			%th 
+= will_paginate
 
-	%tbody
-		- @contacts.each do |contact|
-			%tr
-				%td= contact.title
-				%td= contact.first_name
-				%td= contact.last_name
-				%td= contact.company
-				%td= contact.phone
-				%td= contact.email
-				%td= contact.address
-				%td= contact.post_code
-				%td= contact.text
-				%td
-					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-eye-open'></span></button>".html_safe, contact, html = {:title => "Show"}
-					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_contact_path(contact), html = {:title => "Edit"}
-				%td.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, contact, method: :delete, data: { confirm: 'Are you sure you want to delete this contact?' }, :title => "Destroy"
+%ul.users
+	/ Uses the _contact partial!
+	= render @contacts
 
--#= link_to 'New Contact', new_contact_path
+= will_paginate
