--- a/app/views/jobs/_form.html.haml
+++ b/app/views/jobs/_form.html.haml
@@ -68,7 +68,7 @@
 			= link_to "<button type='button' class='btn btn-default'><span class='glyphicon glyphicon-plus'></span></button>".html_safe, "", html = {:title => "Add", :onclick => "$(add_contact('med'))"}
 
 	.div{ :style => "border: 1px solid gray; margin-bottom:10px; padding-left: 20px;" }
-		%h2{ :style => "font-weight:strong;" } Possible Reps
+		%h2{ :style => "font-weight:strong;" } Possible Mediators / Observers (to come!)
 		.form-group
 			= f.label :mediator1, :class => "control-label col-sm-2"
 			.col-sm-5
