--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -7,7 +7,8 @@
 
 %h1 Jobs Listing
 
-= render :partial => "shared/tasklist", :object => @tasks
+%div{ :style => "max-height:1000px; overflow-y:scroll; width:25%; float:right;" }
+	= render :partial => "shared/tasklist", :object => @tasks
 
 .job-list
 	%ul
