--- a/app/views/shared/_tasklist.html.haml
+++ b/app/views/shared/_tasklist.html.haml
@@ -1,12 +1,12 @@
 - if tasklist.any?
 	.pull-right.task-list
 		-#list-group
-		%ul
+		%ul{ :style => "padding-left:0px;" }
 			/ Float right stuff
 			- tasklist.each do |t|
 				%li{ :id => "li#{t.id}" }
 					-#%a{ :href => "#{task_path(t)}", :class => "list-group-item list-group-item-success #{'financial' if t.is_financial} #{'complete' if t.task_complete?}" }
-					%div{ :id => "t#{t.id}", :style => "background-color:##{t.job.colour if t.job}; color: #{t.job.foreground_colour if t.job};", :class => "list-group-item list-group-item-success collapsed j#{t.job.id if t.job} hand #{'complete' if t.task_complete?}", :"data-toggle" => "collapse", :"data-target" => "#comp#{ t.id }" }
+					%div{ :id => "t#{t.id}", :style => "background-color:##{t.job.colour if t.job}; color: #{t.job.foreground_colour if t.job}; #{'display:none;' if t.task_complete?}", :class => "list-group-item list-group-item-success collapsed j#{t.job.id if t.job} hand #{'complete' if t.task_complete?}", :"data-toggle" => "collapse", :"data-target" => "#comp#{ t.id }" }
 						- if t.task_complete?
 							%span.glyphicon.glyphicon-ok
 						- if t.is_financial
@@ -31,8 +31,9 @@
 				if (data=='complete' || data=='allcomplete') {
 					jQuery('.task-'+task_id).addClass( 'complete' );
 					if (data=='allcomplete') {
-						jQuery('#t'+task_id).addClass( 'complete' );
-						jQuery('#li'+task_id).fadeOut(1000);
+						jQuery('#t'+task_id).addClass( 'complete' ).fadeOut(1000);
+						jQuery('#comp'+task_id).removeClass( 'in' );
+						//jQuery('#li'+task_id).fadeOut(1000);
 					}
 				} else {
 					jQuery('.task-'+task_id).removeClass( 'complete' );
@@ -48,8 +49,9 @@
 				if (data=='complete' || data=='allcomplete') {
 					jQuery('.task-'+task_id).addClass( 'complete' );
 					if (data=='allcomplete') {
-						jQuery('#t'+task_id).addClass( 'complete' );
-						jQuery('#li'+task_id).fadeOut(1000);
+						jQuery('#t'+task_id).addClass( 'complete' ).fadeOut(1000);
+						jQuery('#comp'+task_id).removeClass( 'in' );
+						//jQuery('#li'+task_id).fadeOut(1000);
 					}
 				} else {
 					jQuery('.task-'+task_id).removeClass( 'complete' );
